src/test/deca/etapeB/invalid/assign_diff_type_int_bool.res
./src/test/deca/etapeB/invalid/assign_diff_type_int_bool.deca:8:2: type not expected
